# Pico-AS5600

./: .gitmodules  CMakeLists.txt  LICENSE  as5600_example.c  pack.sh  readme.md
lib/AS5600/: AS5600.c  AS5600.h  CMakeLists.txt
lib/pico_as5600/: CMakeLists.txt  as5600.c  as5600.h
lib/pico_i2c_helpers/: CMakeLists.txt  i2c_helpers.c  i2c_helpers.h  rp2040_i2c_assert_config.h
